# cycles-burner-canister

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  candid.did  dfx.json  rust-toolchain.toml
.dfx/local/: canister_ids.json
.dfx/local/canisters/cycles-burner-canister/: constructor.did  index.js  init_args.txt  service.did  service.did.d.ts  service.did.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  ic-https-outcalls-adapter-pid  icx-proxy-pid  network-id  replica-effective-config.json
.dfx/network/local/replica-configuration/: replica-pid
.dfx/network/local/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
.dfx/network/local/state/replicated_state/ic_registry_local_store/: time.local_store.v1.CertificationTime.pb
.dfx/network/local/state/replicated_state/node-100/: committee_signing_key  derived_node_id  idkg_mega_encryption_key  ni_dkg_dealing_encryption_key  node_signing_key  transport_tls_certificate
.dfx/network/local/state/replicated_state/node-100/crypto/: canister_sks_data.pb  public_keys.pb  sks_data.pb
.dfx/network/local/state/replicated_state/node-100/ic_consensus_pool/certification/: data.mdb  lock.mdb
.dfx/network/local/state/replicated_state/node-100/ic_consensus_pool/consensus/: data.mdb  lock.mdb
.github/workflows/: workflow.yml
e2e-tests/: metrics.sh  reproducibility.sh  scenario.sh  upgrade.sh
scripts/: build-canister.sh
src/: config.rs  lib.rs  main.rs  metrics.rs  storage.rs
(+3 files in other folders)
