[package]
name = "burner-canister"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cycles-burner-canister"
path = "src/main.rs"

[dependencies]
candid = "0.9.10"
ic-cdk = "0.11.2"
ic-cdk-macros = "0.7.0"
ic-cdk-timers = "0.1"
serde = "1.0.171"
serde_bytes = "0.11"
serde_json = "1.0.94"
proptest = "0.9.4"
ic-metrics-encoder = "1.0.0"
getrandom = { version = "0.2", features = ["js"] }
